réingration des éléments perso et non issue de la maquette

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-		<link rel="stylesheet" href="style.css">
+		<link rel="stylesheet" href="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/sass/style.css">
 	</head>
 	<body>
 		<header class="header">
@@ -20,7 +20,7 @@
 		<!-- Section localisation-->
 			<section class="localisation">
 				<i class="fas fa-map-marker-alt"></i>
-					<span class="localisationtext">Paris, Belleville</span>
+					<span class="localisationtext">Lyon, Croix Rousse</span>
 			</section>
 		<!-- Section explore-->
 			<section class="explore">
@@ -50,14 +50,14 @@
 			<section class="restaurants">
 				<h2 class="restaurantstitle">Restaurants</h2>
 				<div class="restaurantcartes">
-					<a class="carte" href="lapalettedugout.html">
+					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/lesapothicaires.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg" alt class="carteimage"/>
+							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/lesapothicaires.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
-							<h3 class="restauranttitle">La palette du goût</h3>
-							<div class="restaurantquartier">Ménilmontant</div>
+							<h3 class="restauranttitle">Les apothicaires</h3>
+							<div class="restaurantquartier">Foch</div>
 							<div class="favorite">
 								<i class="far fa-heart"></i>
 							</div>
@@ -65,14 +65,14 @@
 					</a>
 				</div>
 				<div class="restaurantcartes">
-					<a class="carte" href="lanoteenchantee.html">
+					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/bistrotdupotager.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/lanoteenchantee.jpg" alt class="carteimage"/>
+							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/bistrootdupotager.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
-							<h3 class="restauranttitle">La note enchantée</h3>
-							<div class="restaurantquartier">Charonne</div>
+							<h3 class="restauranttitle">Le bistrot du potager</h3>
+							<div class="restaurantquartier">Gerland</div>
 							<div class="favorite">
 									<i class="far fa-heart"></i>
 							</div>
@@ -80,14 +80,14 @@
 					</a>
 				</div>
 				<div class="restaurantcartes">
-					<a class="carte" href="alafrancaise.html">
+					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/cozna.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/alafrancaise.jpg" alt class="carteimage"/>
+							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/cozna.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
-							<h3 class="restauranttitle">A la française</h3>
-							<div class="restaurantquartier">Cité rouge</div>
+							<h3 class="restauranttitle">Cozna</h3>
+							<div class="restaurantquartier">Sainte Claire</div>
 							<div class="favorite">	
 								<i class="far fa-heart"></i>
 							</div>	
@@ -95,14 +95,14 @@
 					</a>
 				</div>
 				<div class="restaurantcartes">
-					<a class="carte" href="ledelicedesens.html">
+					<a class="carte" href="/Users/chips/Desktop/AntoineChirat_3_15062021/pages/tetedoie.html">
 						<header class="carteheader">
-							<img src="Maquettes Ohmyfood/images/restaurants/ledelicedessens.jpg" alt class="carteimage"/>
+							<img src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/tetedoie.jpeg" alt class="carteimage"/>
 								<span class="restaurantlegend">Nouveau</span>
 						</header>
 						<footer>
-							<h3 class="restauranttitle">Le délice des sens</h3>
-							<div class="restaurantquartier">Folie Méricourt</div>
+							<h3 class="restauranttitle">Tête d'oie</h3>
+							<div class="restaurantquartier">Saint George</div>
 							<div class="favorite">
 								<i class="far fa-heart"></i>
 							</div>
