--- a/pages/bistrotdupotager.html
+++ b/pages/bistrotdupotager.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/sass/style.css">
 	</head>
     <body>
 		<header class="header">
@@ -19,64 +19,64 @@
 		</header>
 		<main>
             <div class="background">
-                <img class="backgroundpicture" src="Maquettes Ohmyfood/images/restaurants/ledelicedessens.jpg">
+                <img class="backgroundpicture" src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/bistrootdupotager.jpeg">
             </div>
             <section class="menu">
                 <header class="menuheader">
-                    <div class="menutitle">Le délice des sens</div>
+                    <div class="menutitle">Le Bistrot du potager</div>
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
                     <h2 class="entréetitle">ENTRÉES</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tartare de thon</h3>
-                                <p class="foodcarddescription">Assaisonné au yuzu</p>
+                            <h3 class="foodcardtitle">Soupe de fêves basques</h3>
+                                <p class="foodcarddescription">Au piment d'Espelette</p>
                                     <span class="foodcardprice">25€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Bouchée de homard croustillant</h3>
-                                <p class="foodcarddescription">Et sa farandole de petits légumes</p>
+                            <h3 class="foodcardtitle">Foie gras de canard mi-cuit</h3>
+                                <p class="foodcarddescription">À la truffe blanche</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Velouté de cèpes </h3>
-                                <p class="foodcarddescription">Aux truffes</p>
+                            <h3 class="foodcardtitle">Oeuf poché</h3>
+                                <p class="foodcarddescription">Et sa panelure d'osso-iraty</p>
                                     <span class="foodcardprice">20€</span>
                         </div>
                 </div>
                 <div class="plats">
                     <h2 class="platstitle">PLATS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Poulet rôti aux herbes de Provence </h3>
-                                <p class="foodcarddescription">Et sa crème de truffe</p>
+                            <h3 class="foodcardtitle">Côte de boeuf à l'ail des ours</h3>
+                                <p class="foodcarddescription">Accompagnée de frites de patate douce</p>
                                     <span class="foodcardprice">40€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Langouste rôtie </h3>
-                                <p class="foodcarddescription">Et ses légumes de saison</p>
+                            <h3 class="foodcardtitle">Agneau en croute</h3>
+                                <p class="foodcarddescription">Aux vieux légumes</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Côte de boeuf Angus </h3>
-                                <p class="foodcarddescription">Et sa purée de panais</p>
+                            <h3 class="foodcardtitle">Filet de bonito</h3>
+                                <p class="foodcarddescription">À l'orange sanguine</p>
                                     <span class="foodcardprice">44€</span>
                         </div>
                 </div>
                 <div class="dessert">
                     <h2 class="desserttitle">DESSERTS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Farandole de desserts</h3>
-                                <p class="foodcarddescription">Du chef</p>
+                            <h3 class="foodcardtitle">Gâteau basque</h3>
+                                <p class="foodcarddescription">Revisité</p>
                                     <span class="foodcardprice">18€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Crème brulée </h3>
-                                <p class="foodcarddescription">Revisitée</p>
+                            <h3 class="foodcardtitle">Macaron au chocolat d'exception</h3>
+                                <p class="foodcarddescription">Et glace à la vanille de Patxaran</p>
                                     <span class="foodcardprice">22€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tiramisu</h3>
-                                <p class="foodcarddescription">À la noisette</p>
+                            <h3 class="foodcardtitle">Mousse au chocolat</h3>
+                                <p class="foodcarddescription">Au piment d'Espelette</p>
                                     <span class="foodcardprice">23€</span>
                         </div>
                 </div>
