--- a/pages/cozna.html
+++ b/pages/cozna.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/sass/style.css">
 	</head>
     <body>
 		<header class="header">
@@ -19,64 +19,64 @@
 		</header>
 		<main>
             <div class="background">
-                <img class="backgroundpicture" src="Maquettes Ohmyfood/images/restaurants/lapalettedugout.jpg">
+                <img class="backgroundpicture" src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/cozna.jpeg">
             </div>
             <section class="menu">
                 <header class="menuheader">
-                    <div class="menutitle">La palette du goût</div>
+                    <div class="menutitle">Cozna</div>
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
                     <h2 class="entréetitle">ENTRÉES</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Fricassée d'escargot</h3>
-                                <p class="foodcarddescription">Au piment d'Espelette</p>
+                            <h3 class="foodcardtitle">Soupe de la mer</h3>
+                                <p class="foodcarddescription">et sa crème de couteau</p>
                                     <span class="foodcardprice">25€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Foie gras de canard mi-cuit</h3>
-                                <p class="foodcarddescription">Et ses copeaux de truffe noire</p>
+                            <h3 class="foodcardtitle">Jardinière de légumes d'antan</h3>
+                                <p class="foodcarddescription">Butternut et panais</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Oeuf au plat</h3>
-                                <p class="foodcarddescription">Assaisonné à la truffe sur lit de caviar</p>
+                            <h3 class="foodcardtitle">Tartare de veau</h3>
+                                <p class="foodcarddescription">et sa croziflette</p>
                                     <span class="foodcardprice">20€</span>
                         </div>
                 </div>
                 <div class="plats">
                     <h2 class="platstitle">PLATS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Filet de boeuf aux herbes</h3>
-                                <p class="foodcarddescription">Accompagné de sa ribambelle de légumes</p>
+                            <h3 class="foodcardtitle">Coquilles Saint-Jacques</h3>
+                                <p class="foodcarddescription">Accompagnées d'une purée de panais</p>
                                     <span class="foodcardprice">40€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Parmentier de queue de boeuf</h3>
-                                <p class="foodcarddescription">À la truffe noire sur sa purée de panais</p>
+                            <h3 class="foodcardtitle">Magret de canard</h3>
+                                <p class="foodcarddescription">Et gratin dauphinois</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Filet de turbot</h3>
-                                <p class="foodcarddescription">Aux agrumes</p>
+                            <h3 class="foodcardtitle">Pigeonneau d’Ille-et-Vilaine</h3>
+                                <p class="foodcarddescription">Sur son lit de gnocchis aux légumes</p>
                                     <span class="foodcardprice">44€</span>
                         </div>
                 </div>
                 <div class="dessert">
                     <h2 class="desserttitle">DESSERTS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Paris-Brest</h3>
-                                <p class="foodcarddescription">Revisité</p>
+                            <h3 class="foodcardtitle">Sorbet de chartreuse</h3>
+                                <p class="foodcarddescription">Et mousse de noisettes</p>
                                     <span class="foodcardprice">18€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Macaron au chocolat d'exception </h3>
-                                <p class="foodcarddescription">Et glace à la vanille de Madagascar</p>
+                            <h3 class="foodcardtitle">Fondant au chocolat</h3>
+                                <p class="foodcarddescription">à la vanille de la réunion</p>
                                     <span class="foodcardprice">22€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Mousse au chocolat </h3>
-                                <p class="foodcarddescription">Au piment d'Espelette et à la truffe noire</p>
+                            <h3 class="foodcardtitle">Millefeuille alpin</h3>
+                                <p class="foodcarddescription">Myrtilles et mûres</p>
                                     <span class="foodcardprice">23€</span>
                         </div>
                 </div>
