--- a/pages/lesapothicaires.html
+++ b/pages/lesapothicaires.html
@@ -10,78 +10,78 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/sass/style.css">
 	</head>
     <body>
 		<header class="header">
             <i class="fas fa-arrow-left"></i>
-			<h1 class="logo">ohmyfood/h1>
+			<h1 class="logo">ohmyfood</h1>
 		</header>
 		<main>
             <div class="background">
-                <img class="backgroundpicture" src="Maquettes Ohmyfood/images/restaurants/lanoteenchantee.jpg">
+                <img class="backgroundpicture" src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/lesapothicaires.jpeg">
             </div>
             <section class="menu">
                 <header class="menuheader">
-                    <div class="menutitle">La note enchantée</div>
+                    <div class="menutitle">Les apothicaires</div>
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
                     <h2 class="entréetitle">ENTRÉES</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Ravioles de foie gras </h3>
-                                <p class="foodcarddescription">Accompagnés de leur crème à la truffe</p>
+                            <h3 class="foodcardtitle">Tomates</h3>
+                                <p class="foodcarddescription">Hollandaise safran vin jaune</p>
                                     <span class="foodcardprice">25€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Caviar osciètre </h3>
-                                <p class="foodcarddescription">Sur blini à la farine de blé noir</p>
+                            <h3 class="foodcardtitle">Thon rouge mariné au verju</h3>
+                                <p class="foodcarddescription">Gelée de boeuf et ponzu, riz noir</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Homard et espuma de potiron</h3>
-                                <p class="foodcarddescription">Mariné aux zestes d'orange</p>
+                            <h3 class="foodcardtitle">Langoustines au BBQ</h3>
+                                <p class="foodcarddescription">Guanciale, haricots, crème fermière</p>
                                     <span class="foodcardprice">20€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Foie gras de canard cuit entier</h3>
-                                <p class="foodcarddescription">Confiture de figue et pain toasté</p>
+                            <h3 class="foodcardtitle">Pigeon, zaatar, trévise</h3>
+                                <p class="foodcarddescription">Sauce prune-myrtille, géranium odorant</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                 </div>
                 <div class="plats">
                     <h2 class="platstitle">PLATS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Noix de coquilles Saint-Jacques</h3>
-                                <p class="foodcarddescription">Sur lit de purée de céleri-rave</p>
+                            <h3 class="foodcardtitle">Tartare de veau</h3>
+                                <p class="foodcarddescription">Pata negra, asperges blanches</p>
                                     <span class="foodcardprice">40€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Langoustine poêlée</h3>
-                                <p class="foodcarddescription">Purée de patate douce</p>
+                            <h3 class="foodcardtitle">Omble Chevalier</h3>
+                                <p class="foodcarddescription">Jus de chou pointue et livèche, « ragoût » végétal</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Mijoté de queue de boeuf</h3>
-                                <p class="foodcarddescription">Et riz sauvage aux zestes de citron</p>
+                            <h3 class="foodcardtitle">Lavare fumé</h3>
+                                <p class="foodcarddescription">Et riz rouge de camargue</p>
                                     <span class="foodcardprice">44€</span>
                         </div>
                 </div>
                 <div class="dessert">
                     <h2 class="desserttitle">DESSERTS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Macaron noisette et chocolat</h3>
-                                <p class="foodcarddescription">Glace au caramel brun et sel de Guérande</p>
+                            <h3 class="foodcardtitle">Biscuit café, </h3>
+                                <p class="foodcarddescription">Sorbet gingembre</p>
                                     <span class="foodcardprice">18€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Baba au rhum revisité </h3>
-                                <p class="foodcarddescription">Avec son coulis de citron</p>
+                            <h3 class="foodcardtitle">Fraises</h3>
+                                <p class="foodcarddescription">Crème cuite, sorbet fruits rouges, persil.</p>
                                     <span class="foodcardprice">22€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tarte au citron meringuée </h3>
-                                <p class="foodcarddescription">Déstructurée</p>
+                            <h3 class="foodcardtitle">Tarte au chocolat</h3>
+                                <p class="foodcarddescription">Sur un lit d'avocat</p>
                                     <span class="foodcardprice">23€</span>
                         </div>
                 </div>
