--- a/pages/tetedoie.html
+++ b/pages/tetedoie.html
@@ -10,7 +10,7 @@
 		<link rel="preconnect" href="https://fonts.gstatic.com">
 		<link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Shrikhand&display=swap" rel="stylesheet">
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/sass/style.css">
 	</head>
     <body>
 		<header class="header">
@@ -19,64 +19,64 @@
 		</header>
 		<main>
             <div class="background">
-                <img class="backgroundpicture" src="Maquettes Ohmyfood/images/restaurants/alafrancaise.jpg">
+                <img class="backgroundpicture" src="/Users/chips/Desktop/AntoineChirat_3_15062021/layout/composants/images/tetedoie.jpeg">
             </div>
             <section class="menu">
                 <header class="menuheader">
-                    <div class="menutitle">À la française</div>
+                    <div class="menutitle">Tête d'oie</div>
                     <i class="far fa-heart"></i>
                 </header>
                 <div class="entrées">
                     <h2 class="entréetitle">ENTRÉES</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Tartare de poulpe acidulé</h3>
-                                <p class="foodcarddescription">Aux zestes d'orange</p>
+                            <h3 class="foodcardtitle">Tartare de thon</h3>
+                                <p class="foodcarddescription">Assaisonné au yuzu</p>
                                     <span class="foodcardprice">25€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Velouté de légumes d'antan</h3>
-                                <p class="foodcarddescription">Carotte, panais, topinambour</p>
+                            <h3 class="foodcardtitle">Homard bleu</h3>
+                                <p class="foodcarddescription">Et algues diverses</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Soupe à l'oignon</h3>
-                                <p class="foodcarddescription">Revisitée</p>
+                            <h3 class="foodcardtitle">Velouté de cèpes </h3>
+                                <p class="foodcarddescription">Aux truffes</p>
                                     <span class="foodcardprice">20€</span>
                         </div>
                 </div>
                 <div class="plats">
                     <h2 class="platstitle">PLATS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Coquilles Saint-Jacques</h3>
-                                <p class="foodcarddescription">Accompagnées d'une purée de panais</p>
+                            <h3 class="foodcardtitle">Poulet-lapin cousues et rôties aux herbes de Provence</h3>
+                                <p class="foodcarddescription">Sauce teriyaki</p>
                                     <span class="foodcardprice">40€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Magret de canard</h3>
-                                <p class="foodcarddescription">Et parmentier de pommes de terre</p>
+                            <h3 class="foodcardtitle">Langouste rôtie </h3>
+                                <p class="foodcarddescription">Et ses légumes de saison</p>
                                     <span class="foodcardprice">35€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Pigeonneau d’Ille-et-Vilaine</h3>
-                                <p class="foodcarddescription">Sur son lit de gnocchis aux légumes</p>
+                            <h3 class="foodcardtitle">Côte de boeuf Angus </h3>
+                                <p class="foodcarddescription">Et sa purée de panais</p>
                                     <span class="foodcardprice">44€</span>
                         </div>
                 </div>
                 <div class="dessert">
                     <h2 class="desserttitle">DESSERTS</h2>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Pétales de violettes glacés</h3>
-                                <p class="foodcarddescription">Et purée de noisettes</p>
+                            <h3 class="foodcardtitle">Café gourmand/h3>
+                                <p class="foodcarddescription">Du chef</p>
                                     <span class="foodcardprice">18€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Fondant au chocolat</h3>
-                                <p class="foodcarddescription">Revisité</p>
+                            <h3 class="foodcardtitle">Crème brulée </h3>
+                                <p class="foodcarddescription">à la lavande</p>
                                     <span class="foodcardprice">22€</span>
                         </div>
                         <div class="foodcard">
-                            <h3 class="foodcardtitle">Millefeuille croustillant</h3>
-                                <p class="foodcarddescription">Myrtilles et pâte d’amande</p>
+                            <h3 class="foodcardtitle">Tiramisu</h3>
+                                <p class="foodcarddescription">speculoos-nutella</p>
                                     <span class="foodcardprice">23€</span>
                         </div>
                 </div>
